k8s/todo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo
  name: todo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: hectoroftroy/k8s-gitops
        ports:
        - containerPort: 3000
