k8s/mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
spec:
  type: NodePort
  ports:
  - port: 27017
    nodePort: 30001
    protocol: TCP
  selector:
    app: mongodb
