k8s/todo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo
  name: todo-service
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - port: 3000
      nodePort: 30003
